--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,102 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.background-image {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+#container {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.top-logo {
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
+  padding-left: 55px;
+}
+.content-wrapper .insta-logo {
+  padding-right: 30px;
+}
+.content-wrapper {
+  width: 700px;
+  padding-left: 5px;
+}
+
+.log-button {
+  border: 1px solid #06365f;
+  border-radius: 4px;
+  width: 90px;
+  height: 30px;
+  background-color: #1c5380;
+  padding: 5px;
+}
+
+.log-button a {
+  text-decoration: none;
+  color: white;
+}
+
+.log-button img {
+  padding-top: 5px;
+}
+.content {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 500px;
+}
+
+.content h2 {
+  color: #06365f;
+  width: 250px;
+  padding-bottom: 10px;
+}
+.text {
+  font-size: 16px;
+  padding-left: 50px;
+}
+
+.app-play {
+  display: flex;
+  justify-content: space-between;
+  /* background-color: red;*/
+  width: 300px;
+  margin-right: 5px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  padding-right: 10px;
+  font-weight: 700;
+}
+
+.insta {
+  color: gray;
+}
+
+.text .size {
+  padding-left: 50px;
+  padding-top: 50px;
 }
