--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,74 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
 }
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: space-around;
+}
+
+.blue-bg {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  display: none;
+}
+
+h2 {
+  color: #396389;
+}
+.main-content {
+  width: 50%;
+  margin: 50px 30px;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  
+}
+
+.main-img {
+  margin: 50px 30px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+ 
+.btn {
+  border: 2px solid #396389;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
+  background-color: #6a8eae;
+  border-radius: 5px;
+}
+
+.btn a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  padding: 15px;
+}
+
+article {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px 50px;
+  
+}
+
+article h2, article p {
+  width: 60%;
+}
+
