--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,67 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+section {
+  padding: 100px;
+  display: flex;
+}
+.container {
+  margin-left: 60px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.logIn {
+  height: 50px;
+  width: 90px;
+  border: 1px none;
+  background-image: linear-gradient(
+    rgba(104, 141, 174, 1),
+    rgba(71, 116, 155, 1)
+  );
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.logInText {
+  color: white;
+  text-decoration: none;
+}
+img {
+}
+header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+.text {
+  padding: 30px;
+  background-color: white;
+  border: 1px none;
+  border-radius: 3px;
+  box-shadow: 0px -3px 2px 0px;
+}
+.bottomImages {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+.badgeIphone {
+  background-color: ;
+  border: none;
+}
+.badgeAndroid {
+  background-color: ;
+  border: none;
+}
+nav {
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
