--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,50 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-color: white;
 }
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid pink;
+  margin: 20px;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: 2px solid purple;
+}
+
+section {
+  width: 300px
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid blue;
+  width: 500px;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 2px solid green;
+}
+
+content {
+  border: 2px solid yellow;
+  width: 450px;
+}
+
+
