--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,98 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 75px auto 0 auto;
+}
+
+.right-container {
+  display: flex;
+  justify-content: space between;
+  flex-direction: column;
+  padding: 0 0 0 5%;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 120px;
+}
+
+section {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.text-paragraph {
+  width: 400px;
+  padding: 20px 50px 0;
+}
+
+h1 {
+  font-size: 1.2em;
+  color: #06365f;
+}
+
+header {
+  width: 520px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.link {
+  padding-left: 50px;
+}
+
+.b {
+  padding-left: 20px;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  background-color: #4b769b;
+  margin: 0 20px;
+  border: 1px solid #06365f;
+  border-radius: 2px;
+}
+button a {
+  padding: 10px;
+  font-size: 12px;
+  color: white;
+  text-decoration: none;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+}
+
+footer a {
+  margin: 10px;
+  text-decoration: none;
+  color: #106fc2;
+}
+
+footer p {
+  color: grey;
+  margin: 10px;
 }
