--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,70 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+section {
+  width: 70%;
+  margin: 0 auto;
+  padding: 100px 0 50px 0;
+}
+aside {
+  display: inline-block;
+  width: 318px;
+}
+article {
+  display: inline-block;
+  width: 50%;
+  padding: 40px;
+  vertical-align: top;
+}
+header {
+  position: relative;
+
+}
+.login{
+  position: absolute;
+  width: 90px;
+  height: 30px;
+  background-image: linear-gradient(lightblue, #1c5380);
+  top: 20%;
+  right: 2%;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+  border: 1px solid #1c5380;
+}
+
+h2 {
+  color:  #06365f;
+}
+
+.intro {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 20px 40px 0 40px;
+}
+.intro p {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+nav {
+  flex: 1 100%;
+  color: #666666;
+  font-weight: bold;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+}
+nav a{
+  color:#1c5380;
+  text-decoration: none;
+  padding: 0 7px;
 }
