--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,9 +9,36 @@ body {
   margin: 0;
 }
 
+.container-1-m{
+
+}
+
+.imagen-brand{
+  position: absolute;
+  top:20%;
+  right:40%;
+}
+
+.container-button{
+  position: absolute;
+  top:24%;
+  right: 20%;
+}
+
+.boton{
+  background:linear-gradient(to top, #0033cc69 -15%, #6195e4 100%);
+  border-color: #0033cc;
+  color:white;
+  font-weight: 700;
+  text-align: center
+}
+
 .container-1{
   background-color: rgb(10,121,189);
   height:30%;
+  width: 100%;
+  height: 300px;
+  border:1px solid;
 }
 
 h1{
@@ -19,3 +46,41 @@ h1{
  font-size: 60px;
  color:white;
 }
+
+.container-info-m{
+  
+  
+}
+
+.container-info-s{
+  width:480px;
+  height: 400px;
+  padding-top: 5px;
+  border:1px solid;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  position:absolute;
+  top:35%;
+  right: 22%;
+}
+
+h2{
+  color:rgb(10,121,189);
+}
+
+
+ul{
+  list-style: none;
+}
+
+.container-footer{
+  position: absolute;
+  bottom:10%;
+}
+li{
+  color:rgb(10,121,189);
+  font-weight: bold;
+
+}
+
+
