--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,73 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+h2{
+  font-size: 2em;
+  color: #06365f;
+  line-height: 1em;
+}
+
+.blue-section{
+  background: url("../images/bgtile.png") repeat-x;
+  height: 400px;
+}
+
+.img-phone{
+  position: absolute;
+  left: 20%;
+  top: 10%;
+}
+
+.main-sec{
+  position: absolute;
+  left: 40%;
+  top: 10%;
+  width: 40%;
+  margin: 0 auto;
+}
+
+.sec-title{
+  font-size: 4em;
+  color: white;
+  vertical-align: middle;
+}
+
+/* container for footer */
+.foot{
+  position: absolute;
+  bottom: 5%;
+  left: 1%;
+  right: 1%;
+  width: 60%;
+  text-align: center;
+  font-size: 80%;
+  margin: 0 auto;
+}
+
+.lk-footer{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  /* to insert some space between items */
+  padding-right: 20px;
+  color: #467C9B;
+  /* to "float" items to the left*/
+  display: inline;
+}
+
+.copyright{
+  text-transform: uppercase;
+  font-weight: bold;
+  color: gray;
+  display: inline;
 }
