--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,38 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+
+.frame {
+  
+  margin-top: -200px;
+  margin-bottom: 200px;
+  margin-right: 150px;
+  margin-left: 800px;
+}
+
+p {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: justify;
+  text-align-last: right;
+  margin-top: -200px;
+  margin-bottom: 200px;
+  margin-right: 150px;
+  margin-left: 800px;
+}
+
+h4 {text-align-last: center;}
+
+h5 {font: 1000 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif, bold;
+  text-align-last: right;
+  margin-top: 0px;
+  color: #06365f;
+  margin-bottom: 250px;
+  margin-right: 300px;
+  position: relative;
+}
+
+.fondo{background: linear-gradient(to bottom ,#06365f 40%, white 60%); 
+  height: 200vh, position: relative;
+
 }
