--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,137 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
+  line-height: 24px;
+}
+
+.header-background {
+  background: linear-gradient(-180deg, #627D9C 0%, #436083 100%);
+  height: 40vh;
+  width: 100%;
+  margin-top: -24px;
+}
+
+.information {
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  bottom: 11em; 
+}
+
+h1 {
+
+  color: #1c5380;
+  font-weight: 700;
+  line-height: 34px;
+  font-size: 26px;
+
+
+}
+
+.right {
+
+
+}
+
+.left {
+padding-left: 4em;
+
+}
+
+footer {
+  width: 50%;
+  margin: 0 auto;
+  position: relative;
+  bottom: 4em;
+  margin-left: 32%;
+}
+
+
+footer ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+footer li {
+  padding-left: 1em;
+  float: left;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 800;
+  color: #1c5380;
+
+}
+
+footer li:last-child {
+  color: rgb(211, 211, 211);
+}
+
+
+.top{
+
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1em;
+
+}
+
+
+.bottom {
+background-image: url("/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/images/frame.png");
+background-repeat:no-repeat;
+background-size: 100%;
+
+}
+
+.content {
+  padding: 1em 2em;
+}
+
+.main-btn {
+  height: 45px;
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-left: 70px;
+  background: linear-gradient(-180deg, #7691AD 0%, #507195 100%);
+  border-radius: 6px;
+  border: 2px solid;
+  border-color: #446387;
+}
+
+.bnt-content{
+position: relative;
+margin-left: 2px;
+}
+
+.btn-img{
+
+
+}
+
+.btn-text{
+  margin-top: 3px;
+  color: white;
+  margin-left: 10px;
+  font-size: 13px;
+  font-weight: 700;
+  opacity: 0.8;
+}
+
+.download{
+
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+
+}
+
+.cta2{
+  margin-left: 20px;
 }
