--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,75 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.section1 {
+  display: flex; 
+  padding: 50px 50px 0px 50px;
+  justify-content: center;
+  margin: 30px;
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  width: 450px;
+}
+
+.txt {
+  background-image: url("../images/frame.png");
+  background-repeat: repeat-x;
+  padding: 10px 20px;
+}
+
+.logIn {
+  position: relative;
+  background-color: #1c5380;
+  border: 1px solid black;
+  border-radius: 4px;
+  width: 90px;
+  width: 80px;
+  height: 30px;
+  background-color: #1c5380;
+  color: white;
+}
+
+.logImg {
+  padding-top: 0px;
+}
+
+.section3 {
+  display: flex; 
+  padding-right: 20px;
+  justify-content: space-between; 
+}
+
+.android {
+  display: flex;
+  align-content: space-between;
+}
+
+.phone {
+  padding-right: 30px;
+}
+
+.footerP {
+  display: flex;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  justify-content: center;
+  padding: 20px;
+  color: #1c5380;
+}
+
+p {
+  margin: 10px;
+}
+
+h2 {
+  color: #06365f;
 }
