--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,78 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.main-container {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.box {
+  padding: 105px;
+  margin: 0px auto;
+  width: 70%;
+}
+
+.phone  {
+  float: left;
+}
+.overview {
+  float: right;
+}
+
+.overview {
+  width: 60%;
+  margin: 10px 0px 40px 40px; 
+}
+
+
+.phone {
+  width: 30%;
+}
+
+.clear-float {
+  clear: both;
+}
+
+.content {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 10px 40px;
+}
+.content img {
+  padding: 30px 30px 0px 0px;
+}
+
+h1 {
+  color: #06365f;
+}
+.Log-in {
+  float: right;
+  border: 1px solid #1c5380;
+  color: white;
+  padding: 5px 10px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-right: 10px;
+  /* display: inline-block; */
+}
+ul {
+  margin: 0 auto;
+  text-align: center;
+  padding-left: 0px
+}
+
+
+li {
+ text-transform: uppercase;
+ display: inline;
+ color: #1c5380;
+ font-weight: bold;
+ padding: 0px 10px;
+}
+
+#copyright {
+  color: grey;
+  padding-left: 25px;
+}
