--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,31 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header{
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  height: 280px;
+}
+.box1{
+  border: 2px solid red;
+  width: 60%;
+  position: fixed;
+  top: 140px;
+  left: 20%;
+}
+.box-phones{
+  display: inline;
+  float: left;
+}
+.box-information{
+  display: inline;
+  float: right;
+}
+.brand{
+  display: inline-block;
+}
+.home{
+  display: inline-block;
+  text-align: center
+}
